# mimir

./: .gitignore  CMakeLists.txt  Config.fin  LICENSE  README.md  config.bff  fbuild.bff  imgui.ini  install.sh  tiuque
contrib/: CMakeLists.txt
contrib/imgui_file_dialog/: CMakeLists.txt
contrib/slang/include/: slang-tag-version.h
contrib/slang/lib/: slangc
lib/: CMakeLists.txt
lib/include/mimir/: deletion_queue.hpp  formats.hpp  interop_view.hpp  mimir.hpp  options.hpp  shader_types.hpp  validation.hpp  view.hpp  view_types.hpp
lib/include/mimir/engine/: camera.hpp  deletion_queue.hpp  device.hpp  engine.hpp  framebuffer.hpp  image.hpp  interop.hpp  interop_device.hpp  interop_view.hpp  metrics.hpp  performance_monitor.hpp  physical_device.hpp  pipeline.hpp  resources.hpp  shader.hpp  swapchain.hpp  view_types.hpp  vk_framebuffer.hpp  vk_swapchain.hpp  vulkan_device.hpp  window.hpp
lib/include/private/mimir/: api.hpp  camera.hpp  deletion_queue.hpp  device.hpp  engine.hpp  framelimit.hpp  interop.hpp  metrics.hpp  pipeline.hpp  resources.hpp  shader_types.hpp  window.hpp
lib/include/public/mimir/: mimir.hpp  options.hpp  view.hpp
lib/src/: camera.cpp  device.cpp  engine.cpp  formats.cpp  framebuffer.cpp  framelimit.cpp  gui.cpp  image.cpp  interop.cpp  interop_device.cpp  metrics.cpp  mimir.cpp  performance_monitor.cpp  physical_device.cpp  pipeline.cpp  resources.cpp  shader.cpp  swapchain.cpp  validation.cpp  vk_framebuffer.cpp  vk_pipeline.cpp  vk_properties.cpp  vk_swapchain.cpp  vulkan_device.cpp  window.cpp
lib/src/internal/: api.hpp  camera.hpp  engine.hpp  framebuffer.hpp  framelimit.hpp  gui.hpp  interop.hpp  interop_device.hpp  physical_device.hpp  pipeline.hpp  resources.hpp  shader.hpp  shader_types.hpp  validation.hpp  vk_initializers.hpp  vk_pipeline.hpp  vk_properties.hpp  vulkan_device.hpp  window.hpp
samples/: CMakeLists.txt
samples/CA3D-voxels/: CMakeLists.txt  Makefile  kernel3D.cuh  main.cu  openmp3D.h  run-first.sh  tools.h
samples/GPU-visual-tool-example/: CMakeLists.txt  Makefile  Makefile_dynamic  main.cu
samples/TensorCA-with_radius/: .gitignore  CMakeLists.txt  asd.sh
samples/TensorCA-with_radius/src/: Debug.cpp  Debug.h  GPUKernels.cuh  IBaseGPUAlgorithm.cuh  TensorCA2D.cu  TensorCA2D.cuh  gif.h  main.cu  nvmlPower.cu
samples/benchmark/: CMakeLists.txt  benchmark.cu  nbody_cpu.cpp
samples/cleap/resources/: CMakeLists.txt
samples/cleap/src/: cleap.cc  cleap.cu  cleap.h  cleap_glx_context.cu  cleap_kernel_delaunay_transformation.cu  cleap_private.h
samples/colloids/: CMakeLists.txt
samples/colloids/colloidscuda/: CMakeLists.txt
samples/colloids/colloidscuda/particlesystem/: CMakeLists.txt
samples/colloids/colloidscuda/run_delaunay/: CMakeLists.txt  simulation.cpp
samples/colloids/colloidscuda/run_verlet/: CMakeLists.txt  configvars.h
samples/colloids/particlesystem/: CMakeLists.txt
samples/colloids/particlesystem/include/: particlesystem_delaunay.h
samples/colloids/particlesystem/src/: kernel_random.cu  kernel_util.cu  particlesystem_cgal.cc  particlesystem_cuda.cu  particlesystem_delaunay.cc  particlesystem_io.cc  randgen.cc  simparameters.cc
samples/colloids/run_delaunay/: CMakeLists.txt  configvars.h  simulation.cpp
samples/colloids/run_verlet/: CMakeLists.txt  simulation.cpp
samples/edgeflip/: Application.cpp  Application.h  CMakeLists.txt
samples/edgeflip/cleap/src/: CMakeLists.txt  cleap.cc  cleap.cu  cleap_private.h  (+1 more)
samples/ejemplo-automata-celular-3D/: main.cu  tools.h
samples/image/: CMakeLists.txt  image.cu  run_image.cpp  run_image.cu
samples/include/: cuda_utils.hpp  cudaprogram.hpp  image.hpp  meshprogram.hpp  validation.hpp
samples/mesh2d/: mesh2d.cpp  meshprogram.cu
samples/mesh3d/: CMakeLists.txt  mesh3d.cu  mesh_obj.cpp  mesh_obj.hpp
samples/nbody/: CMakeLists.txt  batch_main.sh  benchmark.cpp  benchmark.hpp  bodysystemcuda.h  bodysystemcuda_impl.h  nbody.cpp  nbody_cpu.cpp  nbody_cpu.hpp  nbody_gpu.cu  nbody_gpu.cuh
samples/nbody/include/: paramgl.h
samples/points3d/: CMakeLists.txt  nvmlPower.cpp  nvmlPower.hpp  points3d.cu
samples/points3dcpu/: CMakeLists.txt  nvmlPower.cpp  points3dcpu.cpp
samples/pointsdvz/: CMakeLists.txt  points_dvz.cu
samples/pointsdvz/datoviz/: libdatoviz.so.2
samples/pointsgl/: CMakeLists.txt  camera.cpp  camera.hpp  pointsgl.cu
samples/pointsgl/glsl/: marker_frag.glsl  marker_vert.glsl
samples/pointspcl/: CMakeLists.txt  pointspcl.cu
samples/potts/: CMakeLists.txt  CUDAMCMLrng.cu  potts3.cu
samples/powermon/: CMakeLists.txt  Rapl.cpp  nvmlPower.cpp
samples/powermon/include/: nvmlPower.hpp
samples/structured/: CMakeLists.txt  run_structured.cpp  run_structured.cu
samples/texture_cudaarray/: CMakeLists.txt  helper_image.h  helper_math.h  main.cu
samples/tiuque/: Application.cpp  Application.h  CMakeLists.txt  Mesh.cpp  Mesh.h  main.cpp
samples/tiuque/cleap/: CMakeLists.txt
samples/tiuque2/: Application.cpp  Application.h  CMakeLists.txt
samples/unstructured/: CMakeLists.txt  cudaprogram.cu  run_unstructured.cpp  run_unstructured.cu
samples/voronoi/: voronoi.cu
samples/voronoi-simple/: CMakeLists.txt  voronoi.cu
samples/voronoi2/: CMakeLists.txt  setup.h  test.cu  utils.h  voronoi.cuh
src/: CMakeLists.txt  camera.cpp  color.cpp  controls.cpp  cudaview.cpp  engine.cpp  framelimit.cpp  gui.cpp  interop_device.cpp  io.cpp  io.hpp  main.cpp  performance_monitor.cpp  shader.cpp  ui.cpp  utils.cpp  utils.hpp  validation.cpp  validation.hpp  vk_buffers.cpp  vk_commands.cpp  vk_createview.cpp  vk_cuda_engine.cpp  vk_cuda_map.cpp  vk_cudadevice.cpp  vk_cudamem.cpp  vk_device.cpp  vk_engine.cpp  vk_framebuffer.cpp  vk_initializers.cpp  vk_initializers.hpp  vk_memory.cpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_properties.cpp  vk_properties.hpp  vk_rendering.cpp  vk_swap.cpp  vk_swapchain.cpp  vk_sync.cpp  (+4 more)
src/internal/: camera.hpp  color.hpp  framelimit.hpp  shader.hpp  utils.hpp  validation.hpp  vk_device.hpp  vk_framebuffer.hpp  vk_initializers.hpp  vk_pipeline.hpp  vk_properties.hpp  vk_swapchain.hpp  window.hpp
(+166 files in other folders)
